<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffc2"
    android:orientation="vertical"
    tools:context=".view.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#394527"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/calculo_da_autonomia_veicular"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="2dp"
        android:text="@string/nome_do_carro"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:hint="@string/digite_o_nome_do_carro" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="2dp"
        android:text="@string/km_percorrido"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editKm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:hint="@string/quantos_km_voc_percorreu"
        android:inputType="number" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="2dp"
        android:text="@string/quantidade_de_combust_vel"
        android:textColor="@android:color/black"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editCombustivel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:hint="@string/quanto_combust_vel_foi_gasto"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="25dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background2"
            android:onClick="calcular"
            android:text="@string/calcular"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:typeface="serif" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:background="@drawable/button_background"
            android:onClick="limpar"
            android:text="@string/limpar_dados"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:typeface="serif" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:text="Consumo médio da frota:"
        android:textColor="@android:color/black"
        android:padding="20dp"
        android:textSize="20sp"
        />

    <LinearLayout
        android:id="@+id/lyResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginHorizontal="20dp"
        >

    </LinearLayout>

</LinearLayout>